--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.5",
+    "prettier-eslint": "^8.8.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
