--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@material-ui/core": "^1.3.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -9,13 +11,33 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-15": "1.1.1",
+    "jest": "^23.3.0",
+    "jest-css-modules": "^1.1.0",
+    "mock-local-storage": "^1.0.5",
     "prettier-eslint": "^8.8.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject"
-  }
+  },
+  "jest": {
+    "transform": {
+      ".*": "<rootDir>/node_modules/jest-css-modules"
+    },
+    "setupTestFrameworkScriptFile": "mock-local-storage"
+  },
+  "setupFiles": [
+    "<rootDir>/src/setupTests.js"
+  ]
 }
