docs: Inserindo README.md para facilitar a execução do projeto

--- a/package.json
+++ b/package.json
@@ -37,5 +37,7 @@
     },
     "setupTestFrameworkScriptFile": "mock-local-storage"
   },
-  "setupFiles": ["<rootDir>/src/setupTests.js"]
+  "setupFiles": [
+    "<rootDir>/src/setupTests.js"
+  ]
 }
