--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "@material-ui/core": "^1.3.1",
+    "@material-ui/core": "1.2.3",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
+    "react": "^16.4.1",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.3.1",
     "typeface-roboto": "0.0.54"
