--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.3.1",
+    "react-stars": "^2.2.5",
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
@@ -38,5 +39,7 @@
     },
     "setupTestFrameworkScriptFile": "mock-local-storage"
   },
-  "setupFiles": ["<rootDir>/src/setupTests.js"]
+  "setupFiles": [
+    "<rootDir>/src/setupTests.js"
+  ]
 }
